Fork code from travist/jsencrypt version 3.3.1

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,14 +8,15 @@ title: Online RSA Key Generator
     <div class="panel-body">
       <div class="row col-lg-12">
         <div class="well">
-          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <!-- frontpage banner -->
+          <!-- newad -->
           <ins class="adsbygoogle"
-               style="display:inline-block;width:728px;height:90px"
-               data-ad-client="ca-pub-1902035200208763"
-               data-ad-slot="9043467163"></ins>
+          style="display:block"
+          data-ad-client="ca-pub-1902035200208763"
+          data-ad-slot="3517508761"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
           <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
+          (adsbygoogle = window.adsbygoogle || []).push({});
           </script>
         </div>
       </div>
