--- a/test/index.html
+++ b/test/index.html
@@ -2,14 +2,16 @@
 title: Testing JSEncrypt
 layout: default
 ---
-<link href="test/mocha.css" rel="stylesheet" type="text/css">
+
+<link href="test/libs/mocha.css" rel="stylesheet" type="text/css" />
 <div id="mocha"></div>
-<script type="text/javascript" src="test/expect.js"></script>
-<script type="text/javascript" src="test/mocha.js"></script>
-<script>mocha.setup('bdd')</script>
-<script type="text/javascript" src="test/test.rsa.js"></script>
+<script type="text/javascript" src="test/libs/index.js"></script>
+<script type="text/javascript" src="test/libs/mocha.js"></script>
 <script>
-  mocha.checkLeaks();
-  mocha.globals(['jQuery']);
-  mocha.run();
+    mocha.setup("bdd");
+</script>
+<script type="text/javascript" src="test/test.rsa.bundle.js"></script>
+<script>
+    mocha.checkLeaks();
+    mocha.run();
 </script>
